@@ -1,4 +1,4 @@
-too-many-format-args:68:4:pprint_bad:Too many arguments for format string
+format-string-without-interpolation:68:4:pprint_bad:Using formatting for a string that does not have any interpolated variables
 bad-format-string:69:4:pprint_bad:Invalid format string
 bad-format-string:70:4:pprint_bad:Invalid format string
 format-combined-specification:71:4:pprint_bad:Format string contains both automatic field numbering and manual field specification
@@ -31,13 +31,17 @@ too-few-format-args:97:4:pprint_bad:Not enough arguments for format string
 too-many-format-args:98:4:pprint_bad:Too many arguments for format string
 logging-too-few-args:99:4:pprint_bad:Not enough arguments for logging format string
 logging-too-many-args:100:4:pprint_bad:Too many arguments for logging format string
-too-few-format-args:128:4:nested_issue294:Not enough arguments for format string
-too-many-format-args:129:4:nested_issue294:Too many arguments for format string
-missing-format-argument-key:130:4:nested_issue294:Missing keyword argument 'a' for format string
-missing-format-attribute:131:4:nested_issue294:Missing format attribute 'x' in format specifier 'a.x'
-too-few-format-args:137:4:issue310:Not enough arguments for format string
-too-many-format-args:145:4:issue322:Too many arguments for format string
-too-few-format-args:146:4:issue322:Not enough arguments for format string
-too-few-format-args:171:4:issue351:Not enough arguments for format string
-too-many-format-args:173:4:issue351:Too many arguments for format string
-bad-format-string:209:11:avoid_empty_attribute:Invalid format string
+format-string-without-interpolation:101:4:pprint_bad:Using formatting for a string that does not have any interpolated variables
+format-string-without-interpolation:102:4:pprint_bad:Using formatting for a string that does not have any interpolated variables
+format-string-without-interpolation:103:4:pprint_bad:Using formatting for a string that does not have any interpolated variables
+format-string-without-interpolation:104:4:pprint_bad:Using formatting for a string that does not have any interpolated variables
+too-few-format-args:132:4:nested_issue294:Not enough arguments for format string
+too-many-format-args:133:4:nested_issue294:Too many arguments for format string
+missing-format-argument-key:134:4:nested_issue294:Missing keyword argument 'a' for format string
+missing-format-attribute:135:4:nested_issue294:Missing format attribute 'x' in format specifier 'a.x'
+too-few-format-args:141:4:issue310:Not enough arguments for format string
+too-many-format-args:149:4:issue322:Too many arguments for format string
+too-few-format-args:150:4:issue322:Not enough arguments for format string
+too-few-format-args:175:4:issue351:Not enough arguments for format string
+too-many-format-args:177:4:issue351:Too many arguments for format string
+bad-format-string:213:11:avoid_empty_attribute:Invalid format string
