@@ -75,6 +75,10 @@ Release date: TBA
   Closes #3608
   Closes #4346
 
+* Added ``format-string-without-interpolation`` checker: Emitted when formatting is applied to a string without any variables to be replaced
+
+  Closes #4042
+
 
 What's New in Pylint 2.9.6?
 ===========================
